--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,15 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-    color: #fff;
+    color: #002e73;
 }
 
 body, html {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background: #229199;
-    background: -moz-linear-gradient(top, #047b83, #3fa7af);
-    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#047b83), to(#3fa7af));
-    background: -o-linear-gradient(top, #047b83, #3fa7af);
+    background: url("../img/bg.jpg") center no-repeat;
+    background-size: 100% 100%;
 }
 
 .img-box img {
@@ -37,10 +35,6 @@ img {
 
 }
 
-.screen1 {
-    background: #49adb3;
-}
-
 .logo {
     width: 35%;
     margin: 10% auto 5% auto
@@ -51,8 +45,8 @@ img {
     width: 60%;
     padding: 3% 4%;
     margin: 0 auto 5% auto;
-    background: rgba(255, 255, 255, 0.2);
-    border: solid 1px #2892a0;
+    background: rgba(215, 241, 249, 0.8);
+    border: solid 1px #79a4c6;
     border-radius: 20px;
 }
 
@@ -67,7 +61,7 @@ img {
 
 .box-text-1 li {
     position: relative;
-    padding-left: 5%;
+    padding-left: 4.5%;
     letter-spacing: 3px;
 }
 
@@ -75,7 +69,7 @@ img {
     position: absolute;
     top: 0;
     left: 0;
-    width: 5%;
+    width: 4.5%;
     content: '';
 }
 
@@ -105,15 +99,15 @@ img {
 .button {
     display: inline-block;
     height: 100%;
-    background: #08cbd8;
+    background: #008ad9;
     color: #fff;
     padding: 0 40px;
     text-shadow: 2px 2px 2px #666;
     letter-spacing: 20px;
     text-indent: 20px;
-    border: solid 1px #08cbd8;
-    border-radius: 25px;
-    box-shadow: 0 5px 10px -3px #276e73;
+    border: solid 1px #008ad9;
+    border-radius: 12px;
+    box-shadow: 0 5px 10px -3px #31869d;
 }
 
 .button-box-s .button {
@@ -128,333 +122,345 @@ img {
     line-height: 80px;
 }
 
-/** 游戏格子 **/
+/** 游戏界面 **/
 
-.list {
-    position: absolute;
-    top: 7.5%;
-    left: 7%;
-    width: 35%;
-    height: 80%;
-    padding: 2%;
-    box-sizing: content-box;
-    border-radius: 30px;
-    background: #fff;
-    box-shadow: 0 5px 30px -5px #666;
+.interface {
+
+    margin: 20% auto 0 auto;
+    background: rgba(215, 241, 249, 0.8);
+    border: solid 1px #79a4c6;
+    border-radius: 20px;
+}
+.interface:after{
+    display: block;
+    clear: none;
+    content: '';
+
+}
+.interface li {
+    position: relative;
+    display: block;
+    width: 20%;
+    height: 33.3333%;
+    float: left;
 }
 
-.list:after {
+.interface li p {
+    position: absolute;
     display: block;
-    clear: both;
+    top: 15%;
+    left: 15%;
+    width: 70%;
+    height: 70%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: auto 80%;
+    /*background: rgba(0, 0, 0, .5);*/
+}
+
+.interface li p.active:after {
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    border: solid 2px #ef8b3f;
+    border-radius: 50%;
+    box-sizing: border-box;
+    box-shadow: 0 0 20px #fecba3;
     content: '';
 }
 
-.list li {
-    position: relative;
-    width: 100%;
-    height: 100%;
-
+.interface li p.active.error:after {
+    animation: mymove .5s linear infinite alternate;
+    -webkit-animation: mymove .5s linear infinite alternate; /*Safari and Chrome*/
 }
 
-.list li p {
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 85%;
+@keyframes mymove {
+    from {
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
 }
 
-.list li p.r1-1 {
-    background-image: url("../img/res1/r1-1.png")
+@-webkit-keyframes mymove {
+    from {
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
 }
 
-.list li p.r1-2 {
-    background-image: url("../img/res1/r1-2.png")
+.interface li:nth-child(1) p {
+    top: 0;
+    left: 10%;
 }
 
-.list li p.r1-3 {
-    background-image: url("../img/res1/r1-3.png")
-}
-
-.list li p.r1-4 {
-    background-image: url("../img/res1/r1-4.png")
-}
-
-.list li p.r1-5 {
-    background-image: url("../img/res1/r1-5.png")
-}
-
-.list li p.r1-6 {
-    background-image: url("../img/res1/r1-6.png")
-}
-
-.list li p.r1-7 {
-    background-image: url("../img/res1/r1-7.png")
-}
-
-.list li p.r1-8 {
-    background-image: url("../img/res1/r1-8.png")
-}
-
-.list li p.r1-9 {
-    background-image: url("../img/res1/r1-9.png")
-}
-
-.list li p.r1-10 {
-    background-image: url("../img/res1/r1-10.png")
-}
-
-.list li p.r1-11 {
-    background-image: url("../img/res1/r1-11.png")
-}
-
-.list li p.r1-12 {
-    background-image: url("../img/res1/r1-12.png")
-}
-
-.list li p.r1-13 {
-    background-image: url("../img/res1/r1-13.png")
-}
-
-.list li p.r1-14 {
-    background-image: url("../img/res1/r1-14.png")
-}
-
-.list li p.r1-15 {
-    background-image: url("../img/res1/r1-15.png")
-}
-
-.list li p.r1-16 {
-    background-image: url("../img/res1/r1-16.png")
-}
-
-.list li p.r1-17 {
-    background-image: url("../img/res1/r1-17.png")
-}
-
-.list li p.r1-18 {
-    background-image: url("../img/res1/r1-18.png")
-}
-
-.list li p.r1-19 {
-    background-image: url("../img/res1/r1-19.png")
-}
-
-.list li p.r1-20 {
-    background-image: url("../img/res1/r1-20.png")
-}
-
-.list li p.r1-21 {
-    background-image: url("../img/res1/r1-21.png")
-}
-
-.list li p.r1-22 {
-    background-image: url("../img/res1/r1-22.png")
-}
-
-.list li p.r1-23 {
-    background-image: url("../img/res1/r1-23.png")
-}
-
-.list li p.r1-24 {
-    background-image: url("../img/res1/r1-24.png")
-}
-
-.list li p.r1-25 {
-    background-image: url("../img/res1/r1-25.png")
-}
-
-.list li p.r1-26 {
-    background-image: url("../img/res1/r1-26.png")
-}
-
-.list li p.r1-27 {
-    background-image: url("../img/res1/r1-27.png")
-}
-
-.list li p.r1-28 {
-    background-image: url("../img/res1/r1-28.png")
-}
-
-.list li p.r2-1 {
-    background-image: url("../img/res2/r2-1.png")
-}
-
-.list li p.r2-2 {
-    background-image: url("../img/res2/r2-2.png")
-}
-
-.list li p.r2-3 {
-    background-image: url("../img/res2/r2-3.png")
-}
-
-.list li p.r2-4 {
-    background-image: url("../img/res2/r2-4.png")
-}
-
-.list li p.r2-5 {
-    background-image: url("../img/res2/r2-5.png")
-}
-
-.list li p.r2-6 {
-    background-image: url("../img/res2/r2-6.png")
-}
-
-.list li p.r2-7 {
-    background-image: url("../img/res2/r2-7.png")
-}
-
-.list li p.r2-8 {
-    background-image: url("../img/res2/r2-8.png")
-}
-
-.list li p.r2-9 {
-    background-image: url("../img/res2/r2-9.png")
-}
-
-.list li p.r2-10 {
-    background-image: url("../img/res2/r2-10.png")
-}
-
-.list li p.r2-11 {
-    background-image: url("../img/res2/r2-11.png")
-}
-
-.list li p.r2-12 {
-    background-image: url("../img/res2/r2-12.png")
-}
-
-.list li p.r2-13 {
-    background-image: url("../img/res2/r2-13.png")
-}
-
-.list li p.r2-14 {
-    background-image: url("../img/res2/r2-14.png")
-}
-
-.list li p.r2-15 {
-    background-image: url("../img/res2/r2-15.png")
-}
-
-.list li p.r2-16 {
-    background-image: url("../img/res2/r2-16.png")
-}
-
-.list li p.r2-17 {
-    background-image: url("../img/res2/r2-17.png")
-}
-
-.list li p.r2-18 {
-    background-image: url("../img/res2/r2-18.png")
-}
-
-.list li p.r2-19 {
-    background-image: url("../img/res2/r2-19.png")
-}
-
-.list li p.r2-20 {
-    background-image: url("../img/res2/r2-20.png")
-}
-
-.list li p.r2-21 {
-    background-image: url("../img/res2/r2-21.png")
-}
-
-.list li p.r2-22 {
-    background-image: url("../img/res2/r2-22.png")
-}
-
-.list li p.r2-23 {
-    background-image: url("../img/res2/r2-23.png")
-}
-
-.list li p.r2-24 {
-    background-image: url("../img/res2/r2-24.png")
-}
-
-.list li p.r2-25 {
-    background-image: url("../img/res2/r2-25.png")
-}
-
-.list li p.r2-26 {
-    background-image: url("../img/res2/r2-26.png")
-}
-
-.list li p.r2-27 {
-    background-image: url("../img/res2/r2-27.png")
-}
-
-.list li p.r2-28 {
-    background-image: url("../img/res2/r2-28.png")
-}
-
-.list li p.r2-29 {
-    background-image: url("../img/res2/r2-29.png")
-}
-
-.list li p.r2-30 {
-    background-image: url("../img/res2/r2-30.png")
-}
-
-.list li p.r2-31 {
-    background-image: url("../img/res2/r2-31.png")
-}
-
-.list li p.r2-32 {
-    background-image: url("../img/res2/r2-32.png")
-}
-
-/** 图片右侧 **/
-.list-right {
-    position: absolute;
+.interface li:nth-child(2) p {
     top: 10%;
-    right: 5%;
-    width: 40%;
-
+    left: -5%;
 }
 
-.list-right .list-right-title {
+.interface li:nth-child(3) p {
+    top: 15%;
+    left: -15%;
+}
+
+.interface li:nth-child(4) p {
+    top: 5%;
+    left: -10%;
+}
+
+.interface li:nth-child(5) p {
+    top: 20%;
+    left: 0;
+}
+
+.interface li:nth-child(6) p {
+    top: -10%;
+    left: 25%;
+}
+
+.interface li:nth-child(7) p {
+    top: 0;
+    left: 15%;
+}
+
+.interface li:nth-child(8) p {
+    top: 30%;
+    left: 10%;
+}
+
+.interface li:nth-child(9) p {
+    top: 5%;
+    left: -10%;
+}
+
+.interface li:nth-child(10) p {
+    top: 0;
+    left: 15%;
+}
+
+.interface li:nth-child(11) p {
+    top: 0;
+    left: 40%;
+}
+
+.interface li:nth-child(12) p {
+    top: -10%;
+    left:25%;
+}
+
+.interface li:nth-child(13) p {
+    top: 15%;
+    left: 15%;
+}
+
+.interface li:nth-child(14) p {
+    top: 0;
+    left: 15%;
+}
+
+.interface li:nth-child(15) p {
+    top: 10%;
+    left: 0;
+}
+.s1 {
+    background-image: url("../img/snow/s1.png");
+}
+
+.s2 {
+    background-image: url("../img/snow/s2.png");
+}
+
+.s3 {
+    background-image: url("../img/snow/s3.png");
+}
+
+.s4 {
+    background-image: url("../img/snow/s4.png");
+}
+
+.s5 {
+    background-image: url("../img/snow/s5.png");
+}
+
+.s6 {
+    background-image: url("../img/snow/s6.png");
+}
+
+.s7 {
+    background-image: url("../img/snow/s7.png");
+}
+
+.s8 {
+    background-image: url("../img/snow/s8.png");
+}
+
+.s9 {
+    background-image: url("../img/snow/s9.png");
+}
+
+.s10 {
+    background-image: url("../img/snow/s10.png");
+}
+
+.s11 {
+    background-image: url("../img/snow/s11.png");
+}
+
+.s12 {
+    background-image: url("../img/snow/s12.png");
+}
+
+.s13 {
+    background-image: url("../img/snow/s13.png");
+}
+
+.s14 {
+    background-image: url("../img/snow/s14.png");
+}
+
+.s15 {
+    background-image: url("../img/snow/s15.png");
+}
+
+.s16 {
+    background-image: url("../img/snow/s16.png");
+}
+
+.s17 {
+    background-image: url("../img/snow/s17.png");
+}
+
+.s18 {
+    background-image: url("../img/snow/s18.png");
+}
+
+.s19 {
+    background-image: url("../img/snow/s19.png");
+}
+
+.s20 {
+    background-image: url("../img/snow/s20.png");
+}
+
+.s21 {
+    background-image: url("../img/snow/s21.png");
+}
+
+.s22 {
+    background-image: url("../img/snow/s22.png");
+}
+
+/** 进度条 **/
+.process {
+    position: absolute;
+    top: 12%;
     display: none;
-    text-align: center;
-    line-height: 200%;
 }
 
-.list-right .button-box p.button {
-    display: block;
-    width: 50%;
-    margin: 20% auto 0 auto;
-    transition: all 0.2s;
+.process-line {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 2px;
+    background: #002e73;
 }
-.list-right .button-box p.button.gray{
-    background: #d1d1d1;
+
+.processA {
+    width: 14%;
+    left: 44%;
+}
+
+.processB {
+    width: 60%;
+    left: 20%;
+}
+
+.process ul {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    height: 100%
+}
+
+.process ul li {
+    display: block;
+    float: left;
+    height: 100%;
+    background: #fff;
+    border: solid 3px #00bae9;
+    box-sizing: border-box;
+    box-shadow: 1px 3px 10px #666 inset;
+    border-radius: 50%;
+    text-align: center;
+    color: #00bae9;
+    line-height: 180%;
+}
+
+.process ul li.error {
+    color: #fff;
+    background: #eb6100;
+    border: solid 3px #ec6941;
+    box-shadow: 1px 3px 10px #532202 inset;
+}
+
+.process ul li.correct {
+    color: #fff;
+    background: #0068b7;
+    border: solid 3px #002e73;
+    box-shadow: 1px 3px 10px #003763 inset;
+}
+
+.processB ul li {
+    margin: 0 1.69%;
+}
+
+.processA ul li:nth-child(2) {
+    float: right;
+}
+
+.processB ul li:nth-child(1) {
+    margin-left: 0;
+}
+
+.processB ul li:nth-child(10) {
+    margin-right: 0;
+    float: right;
 }
 
 /** 游戏暂停 **/
 .stop {
     position: absolute;
-    bottom: 7%;
-    right: 8%;
-    width: 7.5%;
+    top: 11%;
+    right: 7%;
+    width: 5%;
+    display: none;
 
 }
 
 /**  游戏时间 **/
 .time-box {
     position: absolute;
-    top: 10%;
-    left: 10%;
+    top: 7%;
+    left: 7%;
     text-align: center;
+    display: none;
 
 }
 
 .time-box p {
-    margin: 10% auto 0 auto;
+    margin: 0 auto 0 auto;
     background: url("../img/daojishi.png") top center no-repeat;
     background-size: 100% 100%;
-    color: #057b83;
+    color: #fff;
 }
 
 .time-box p span {
-    color: #057b83;
+    color: #fff;
 }
