--- a/css/style.css
+++ b/css/style.css
@@ -36,14 +36,14 @@ img {
 }
 
 .logo {
-    width: 35%;
+    width: 40%;
     margin: 10% auto 5% auto
 }
 
 /* 文字说明背景 */
 .box-bg {
-    width: 60%;
-    padding: 3% 4%;
+    width: 65%;
+    padding: 3%;
     margin: 0 auto 5% auto;
     background: rgba(215, 241, 249, 0.8);
     border: solid 1px #79a4c6;
@@ -80,7 +80,8 @@ img {
 
 /* 文字说明样式2  文字剧中显示 */
 .box-text-2 {
-    padding: 2% 0;
+    padding: 2% 0 4% 0;
+    line-height: 200%;
     text-align: center;
     font-weight: bold;
 }
@@ -92,7 +93,7 @@ img {
 /* 按钮样式 */
 .button-box {
     width: 100%;
-    height: 8.5%;
+    height: 9.5%;
     text-align: center;
 }
 
@@ -131,12 +132,14 @@ img {
     border: solid 1px #79a4c6;
     border-radius: 20px;
 }
-.interface:after{
+
+.interface:after {
     display: block;
     clear: none;
     content: '';
 
 }
+
 .interface li {
     position: relative;
     display: block;
@@ -250,7 +253,7 @@ img {
 
 .interface li:nth-child(12) p {
     top: -10%;
-    left:25%;
+    left: 25%;
 }
 
 .interface li:nth-child(13) p {
@@ -267,6 +270,7 @@ img {
     top: 10%;
     left: 0;
 }
+
 .s1 {
     background-image: url("../img/snow/s1.png");
 }
